# MAC-ros2_elementary_teaching

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yaml
install/: local_setup.sh  setup.sh
install/homework/lib/homework/: Client  Publisher  Server  Subscriber
install/homework/share/ament_index/resource_index/package_run_dependencies/: homework
install/homework/share/ament_index/resource_index/parent_prefix_path/: homework
install/homework/share/homework/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/homework/share/homework/cmake/: homeworkConfig-version.cmake  homeworkConfig.cmake
install/homework/share/homework/environment/: ament_prefix_path.dsv  path.dsv
install/homework/share/homework/launch/: launch_hw.launch
install/interfaces/include/interfaces/interfaces/srv/: distance.h  distance.hpp
install/interfaces/include/interfaces/interfaces/srv/detail/: distance__functions.c  distance__functions.h  distance__rosidl_typesupport_fastrtps_c.h
install/interfaces/local/lib/python3.10/dist-packages/interfaces/: _interfaces_s.ep.rosidl_typesupport_c.c  _interfaces_s.ep.rosidl_typesupport_introspection_c.c
install/interfaces/local/lib/python3.10/dist-packages/interfaces/srv/: _distance.py
install/interfaces/share/ament_index/resource_index/parent_prefix_path/: interfaces
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/interfaces/share/interfaces/cmake/: rosidl_cmake-extras.cmake
install/interfaces/share/interfaces/srv/: Distance.idl  Distance.srv  Distance_Response.msg
log/: latest_build  latest_test
src/homework/: CMakeLists.txt  package.xml
src/homework/include/homework/: service_hw.h  topic_hw.h
src/homework/launch/: launch_hw.launch  launch_hw.launch.py
src/homework/src/: client.cpp  publisher.cpp  server.cpp  subscription.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: Distance.srv
